new content for "el evento"

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Mobile viewport optimized: j.mp/bplateviewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="lib/css/base.css">
+    <link rel="stylesheet" type="text/css" href="lib/css/event.css">    
   </head>
   <body>
     <div class="page">
@@ -74,12 +75,26 @@
           <ul class="tab-content">
             <li>
               <div class="section">
-                Section 01
+                <div class="event left"><span class="bold">Avantica Technologies</span> le invita a un evento sin precedentes, en el cual expertos internacionales discutirán las últimas tendencias en tecnologías y aplicaciones móviles.
+Usted descubrirá las posibilidades que estas tecnologías ofrecen a las empresas para acercarse a sus clientes internos y externos, vender más, ser más productivas, agilizar servicios  y optimizar sus procesos.
+De acuerdo con la consultora Gartner, el mercado global de smartphones creció un 72% en el 2010, y el mercado peruano no es ajeno a esta tendencia. En el 2003 habían solamente 2,3 millones de usuarios de servicios móviles en el Perú,
+</div><div class="event right">
+ para agosto del 2008 había un total de 18 millones y se proyecta que el 2011 va traer 13 millones de usuarios nuevos.
+Es claro que el auge y la oferta de estos dispositivos trae grandes oportunidades a las empresas que quieren acercarse a sus clientes, ser más visibles y ser más productivos.
+Independientemente de la rama de negocios a la que se dirija su empresa, hay una solución que la tecnología móvil le puede proporcionar, ya sea usando funcionalidades de geo-localización.
+<span class="bold">Avantica Technologies</span> le invita a un evento sin precedentes, en el cual expertos internacionales discutirán las últimas tendencias en tecnologías y aplicaciones móviles.
+<!--Usted descubrirá las posibilidades que estas tecnologías ofrecen a las empresas para acercarse a sus clientes internos y externos, vender más, ser más productivas, agilizar servicios  y optimizar sus procesos.-->
+                </div>
               </div>
             </li>
             <li>
               <div class="section">
-                Section 02
+                <div class="speaker">
+                    <div class="photo"><img src="lib/img/MarioChaves.jpg"></div>
+                    <div class="description"><p>Informático de profesión y con una maestría en ingenieria eléctrica en la Universidad de California, Davis. Cuenta con más de 25 años de experiencia en ingeniería de software y de gestión de ingeniería en Silicon Valley.</p><p> Al inicio de su carrera laboró para Software Publishing Corporation, donde creó Harvard Graphics, que redefinió la categoría de software de gráficos de presentación y fue en gran parte responsable del crecimiento de la compañía de $20 millones a más de $ 100 millones en ingresos. Luego fue Director de Desarrollo de Productos de Intuit, donde lideró el desarrollo de nuevos productos para la línea de productos de Quicken y gestionó el desarrollo de Intuit's International Products.  Antes de fundar Avantica, trabajó como Jefe de tecnología de Babcock & Brown, una firma líder de banca de inversión, donde lideró un equipo de funcionarios distribuidos por todo el mundo y fue responsable de todas las estrategias de tecnología e implementación.</p><p>En los últimos 10 años, Mario ha liderado el crecimiento de Avantica Technologies, una empresa de desarrollo de software y servicios de control de calidad enfocada en crear aplicaciones para otras compañías. Bajo su liderazgo, Avantica se ha convertido en uno de los principales proveedores en Latinoamerica de servicios de outsourcing para el mercado Norteamericano.</p>
+                </div>
+                </div>
+                
               </div>
             </li>
             <li>
