--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- Mobile viewport optimized: j.mp/bplateviewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="lib/css/base.css">
-    <link rel="stylesheet" type="text/css" href="lib/css/event.css">    
+    <link rel="stylesheet" type="text/css" href="lib/css/event.css">
+    <link rel="stylesheet" type="text/css" href="lib/css/speakers.css">            
   </head>
   <body>
     <div class="page">
@@ -83,17 +84,28 @@ De acuerdo con la consultora Gartner, el mercado global de smartphones creció u
 Es claro que el auge y la oferta de estos dispositivos trae grandes oportunidades a las empresas que quieren acercarse a sus clientes, ser más visibles y ser más productivos.
 Independientemente de la rama de negocios a la que se dirija su empresa, hay una solución que la tecnología móvil le puede proporcionar, ya sea usando funcionalidades de geo-localización.
 <span class="bold">Avantica Technologies</span> le invita a un evento sin precedentes, en el cual expertos internacionales discutirán las últimas tendencias en tecnologías y aplicaciones móviles.
-<!--Usted descubrirá las posibilidades que estas tecnologías ofrecen a las empresas para acercarse a sus clientes internos y externos, vender más, ser más productivas, agilizar servicios  y optimizar sus procesos.-->
                 </div>
               </div>
             </li>
             <li>
               <div class="section">
                 <div class="speaker">
-                    <div class="photo"><img src="lib/img/MarioChaves.jpg"></div>
-                    <div class="description"><p>Informático de profesión y con una maestría en ingenieria eléctrica en la Universidad de California, Davis. Cuenta con más de 25 años de experiencia en ingeniería de software y de gestión de ingeniería en Silicon Valley.</p><p> Al inicio de su carrera laboró para Software Publishing Corporation, donde creó Harvard Graphics, que redefinió la categoría de software de gráficos de presentación y fue en gran parte responsable del crecimiento de la compañía de $20 millones a más de $ 100 millones en ingresos. Luego fue Director de Desarrollo de Productos de Intuit, donde lideró el desarrollo de nuevos productos para la línea de productos de Quicken y gestionó el desarrollo de Intuit's International Products.  Antes de fundar Avantica, trabajó como Jefe de tecnología de Babcock & Brown, una firma líder de banca de inversión, donde lideró un equipo de funcionarios distribuidos por todo el mundo y fue responsable de todas las estrategias de tecnología e implementación.</p><p>En los últimos 10 años, Mario ha liderado el crecimiento de Avantica Technologies, una empresa de desarrollo de software y servicios de control de calidad enfocada en crear aplicaciones para otras compañías. Bajo su liderazgo, Avantica se ha convertido en uno de los principales proveedores en Latinoamerica de servicios de outsourcing para el mercado Norteamericano.</p>
+                    <div class="photo-right"><img src="/lib/img/MarioChaves.jpg"></div>
+                    <div class="description-right"><p class="name">Mario Chaves</p><p>Informático de profesión y con una maestría en ingenieria eléctrica en la Universidad de California, Davis. Cuenta con más de 25 años de experiencia en ingeniería de software y de gestión de ingeniería en Silicon Valley.</p><p> Al inicio de su carrera laboró para Software Publishing Corporation, donde creó Harvard Graphics, que redefinió la categoría de software de gráficos de presentación y fue en gran parte responsable del crecimiento de la compañía de $20 millones a más de $ 100 millones en ingresos. Luego fue Director de Desarrollo de Productos de Intuit, donde lideró el desarrollo de nuevos productos para la línea de productos de Quicken y gestionó el desarrollo de Intuit's International Products.  Antes de fundar Avantica, trabajó como Jefe de tecnología de Babcock & Brown, una firma líder de banca de inversión, donde lideró un equipo de funcionarios distribuidos por todo el mundo y fue responsable de todas las estrategias de tecnología e implementación.</p><!--<p>En los últimos 10 años, Mario ha liderado el crecimiento de Avantica Technologies, una empresa de desarrollo de software y servicios de control de calidad enfocada en crear aplicaciones para otras compañías. Bajo su liderazgo, Avantica se ha convertido en uno de los principales proveedores en Latinoamerica de servicios de outsourcing para el mercado Norteamericano.</p>--></div>
                 </div>
+                <div class="speaker">
+                    <div class="photo-left"><img src="/lib/img/EstuardoRobles.jpg"></div>
+                    <div class="description-left"><p class="name">Estuardo Robles</p><p>Estuardo Robles es especialista en mercadeo y desarrollo de negocios internacionales. Ha asesorado a diversas empresas a incursionar en nuevos mercados y a regiones a desarrollar estrategias de promoción comercial. En el sector móvil ha liderado los esfuerzos de expansión internacional de SMSRGENCY, una cadena de respuesta a emergencias basada en SMS que ha recibido reconocimiento internacional por la UN-GAID (de naciones unidas). Actualmente desarrolla negocios en EEUU y latinoamerica para AppsGeyser, la plataforma de creación de Apps para Android de mayor crecimiento en el mundo.</p> <p>Robles se graduó obtuvo su título de Marketing en la Universidad de Texas en Austin y su MBA con la Pontifica Universidad Católica de Chile. Ha sido profesor de la Universidad Francisco Marroquín en Guatemala. Es fluido en inglés, español y portugués. Actualmente se encuentra basado basado en Austin, TX.</p></div>
                 </div>
+                <div class="speaker">
+                    <div class="photo-right"><img src="/lib/img/HervePluche.jpg"></div>
+                    <div class="description-right"><p class="name">Herve Pluche</p><p>Herve Pluche es un empresario con un historial de éxito en el desarrollo de Software a la Medida, Servicios Móviles y Telecomunicaciones. Ingresó a las líneas de SAP en el 2010 para liderar la iniciativa Apollo, un programa dirigido a hacer de las compras móviles una realidad para minoristas tradicionales y compañía de productos de consumo. La solución móvil fue exhibida durante la super session en el NRF BigShow en Nueva York en enero del 2011. El prototipo funcional para el mercado será  liberado este verano boreal, con usuarios como L’Oreal Group y el Casino Group.</p><p>Co-fundador de StoreXperience Inc, una solución de consumo móvil diseñada para responder a las necesidades de minoristas tradicionales (’07-’10). Presidente y CEO de Neocase Software Inc, una compañía de software a la carta orientada al servicio al cliente colaborativo (’04-’07).  Dirigió actividades de inversion paraTelecom Italia en Sillicon Valley y laboró para compañías como AT&T y Pacific Bell a travez de Bain & Company.</p></div>
+                </div>
+                <div class="speaker">
+                    <div class="photo-left"><img src="/lib/img/JonathanFoulkes.jpg"></div>
+                    <div class="description-left"><p class="name">Jonathan Foulkes</p><p>Jonathan Foulkes es el Co fundador y CEO de Rover Apps, un proveedor de soluciones móviles que responden a las necesidades que presentanlas empresas y proveedores independientes de software que requeren acceso móvil a la información de forma más rápida y segura.</p><p>Jonathan tiene más de 25 años de experiencia en roles de liderazgo técnico y ejecutivo en compañías como Reed Business Information, Clinical Solutions, DoubleClick (Google) y DCA / Attachmate, con una trayectoria de éxito en la entrega de soluciones en mercados altamente competitivos. Reconocido por su innovación a través de los años, Jonathan lidera equipos que entregan soluciones revolucionarias.</p></div>
+                </div>
+
                 
               </div>
             </li>
