--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@ Independientemente de la rama de negocios a la que se dirija su empresa, hay una
             </li>
             <li>
               <div class="section">
-                Section 03
+                Contenido en desarrollo. <br>Fecha de publicación: Viernes 6 Mayo 2011
               </div>
             </li>
             <li>
               <div class="section">
-                Section 04
+                Contenido en desarrollo.<br> Fecha de publicación: Viernes 6 Mayo 2011
               </div>
             </li>
           </ul>
