--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="section">
                 <div class="speaker">
                   <div class="photo-right">
-                    <img src="./lib/img/MarioChaves.jpg">
+                    <img src="./lib/img/MarioChaves.png">
                   </div>
                   <div class="description-right">
                     <p class="name">
@@ -125,7 +125,7 @@
                 </div>
                 <div class="speaker">
                   <div class="photo-left">
-                    <img src="./lib/img/EstuardoRobles.jpg">
+                    <img src="./lib/img/EstuardoRobles.png">
                   </div>
                   <div class="description-left">
                     <p class="name">
@@ -141,7 +141,7 @@
                 </div>
                 <div class="speaker">
                   <div class="photo-right">
-                    <img src="./lib/img/HervePluche.jpg">
+                    <img src="./lib/img/HervePluche.png">
                   </div>
                   <div class="description-right">
                     <p class="name">
@@ -157,7 +157,7 @@
                 </div>
                 <div class="speaker">
                   <div class="photo-left">
-                    <img src="./lib/img/JonathanFoulkes.jpg">
+                    <img src="./lib/img/JonathanFoulkes.png">
                   </div>
                   <div class="description-left">
                     <p class="name">
@@ -176,54 +176,85 @@
             <li>
               <div class="section">
                 <div>
-                    <div class="speech">
-                        <p class="time">5:00am</p>
-                        <p class="description">Event one</p>                        
-                    </div>
-                   <div class="speech">
-                        <p class="time">6:00am</p>
-                        <p class="description">Event one</p>                        
-                    </div>
-                    <div class="speech">
-                        <p class="time">7:00am</p>
-                        <p class="description">Event one</p>                        
-                    </div>
-                    <div class="speech">
-                        <p class="time">7:00am</p>
-                        <p class="description">Event one</p>                        
-                    </div>
-
+                  <div class="speech">
+                    <p class="time">
+                      5:00am
+                    </p>
+                    <p class="description">
+                      Event one
+                    </p>
+                  </div>
+                  <div class="speech">
+                    <p class="time">
+                      6:00am
+                    </p>
+                    <p class="description">
+                      Event one
+                    </p>
+                  </div>
+                  <div class="speech">
+                    <p class="time">
+                      7:00am
+                    </p>
+                    <p class="description">
+                      Event one
+                    </p>
+                  </div>
+                  <div class="speech">
+                    <p class="time">
+                      7:00am
+                    </p>
+                    <p class="description">
+                      Event one
+                    </p>
+                  </div>
                 </div>
-
-
                 <div>
-                    <div class="speech">
-                        <p class="time">8:00am</p>
-                        <p class="description">Event one</p>                        
-                    </div>
-                   <div class="speech">
-                        <p class="time">9:00am</p>
-                        <p class="description">Event one</p>                        
-                    </div>
-                    <div class="speech">
-                        <p class="time">11:00pm</p>
-                        <p class="description">How to prepare "Pisco Sour"</p>                        
-                    </div>
-                    <div class="speech">
-                        <p class="time">7:00am</p>
-                        <p class="description">Event one</p>                        
-                    </div>
-
+                  <div class="speech">
+                    <p class="time">
+                      8:00am
+                    </p>
+                    <p class="description">
+                      Event one
+                    </p>
+                  </div>
+                  <div class="speech">
+                    <p class="time">
+                      9:00am
+                    </p>
+                    <p class="description">
+                      Event one
+                    </p>
+                  </div>
+                  <div class="speech">
+                    <p class="time">
+                      11:00pm
+                    </p>
+                    <p class="description">
+                      How to prepare "Pisco Sour"
+                    </p>
+                  </div>
+                  <div class="speech">
+                    <p class="time">
+                      7:00am
+                    </p>
+                    <p class="description">
+                      Event one
+                    </p>
+                  </div>
                 </div>
-
-
               </div>
             </li>
             <li>
               <div class="section">
 
-                <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=211472431020783374417.0004a2a2d88a58158a670&amp;ll=-12.101767,-77.049952&amp;spn=0.014645,0.018239&amp;z=15&amp;output=embed"></iframe><br /><small>View <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=211472431020783374417.0004a2a2d88a58158a670&amp;ll=-12.101767,-77.049952&amp;spn=0.014645,0.018239&amp;z=15&amp;source=embed" style="color:#0000FF;text-align:left">Untitled</a> in a larger map</small>
-
+                <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=211472431020783374417.0004a2a2d88a58158a670&amp;ll=-12.101767,-77.049952&amp;spn=0.014645,0.018239&amp;z=15&amp;output=embed">
+                </iframe>
+                <br />
+                <small>
+                  View
+                  <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=211472431020783374417.0004a2a2d88a58158a670&amp;ll=-12.101767,-77.049952&amp;spn=0.014645,0.018239&amp;z=15&amp;source=embed" style="color:#0000FF;text-align:left">Untitled</a> in a larger map
+                </small>
               </div>
             </li>
           </ul>
