--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="lib/css/event.css">
     <link rel="stylesheet" type="text/css" href="lib/css/speakers.css">
     <link rel="stylesheet" type="text/css" href="lib/css/agenda.css">
+    <link rel="stylesheet" type="text/css" href="lib/css/location.css">
   </head>
   <body>
     <div class="page">
@@ -274,11 +275,14 @@
             </li>
             <li>
               <div class="section">
-                <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=211472431020783374417.0004a2a2d88a58158a670&amp;ll=-12.101767,-77.049952&amp;spn=0.014645,0.018239&amp;z=15&amp;output=embed">
-                </iframe>
-                <p class="map-footer">
-                  <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=211472431020783374417.0004a2a2d88a58158a670&amp;ll=-12.101767,-77.049952&amp;spn=0.014645,0.018239&amp;z=15&amp;source=embed" style="color:#0000FF;text-align:left"> Ver en google maps </a>
-                </p>
+                <div class="locationInfo">
+                    <div class="image"><img src="lib/img/Hotel.jpg"></div>
+                    <div class="description"><p><span class="bold">El Country Club Lima Hotel</span> ubicado en el exclusivo distrito de San Isidro es reconocido como uno de más elegantes en Lima, Perú.</p><p><span class="bold">Direccion:</span><br>Los Eucaliptos 590 <br>San Isidro</br>Lima 35, Perú</div>
+                </div>
+                <div class="map">
+                    <iframe width="390" height="440" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=211472431020783374417.0004a2da2404e1c5db19c&amp;ll=-12.098861,-77.049533&amp;spn=0.006578,0.010943&amp;output=embed"></iframe>
+                </div>
+
               </div>
             </li>
           </ul>
@@ -293,3 +297,4 @@
     <script type='text/javascript' src="lib/js/app.js"></script>
   </body>
 </html>
+
