--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7 ]> <html class="ie6 ie not-ready" > <![endif]-->
-<!--[if IE 7 ]>    <html class="ie7 ie not-ready" > <![endif]-->
-<!--[if IE 8 ]>    <html class="ie8 ie not-ready" > <![endif]-->
+<!--[if lt IE 7 ]> <html class="ie6 ie not-ready" manifest="/cache.manifest"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7 ie not-ready" manifest="/cache.manifest"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8 ie not-ready" manifest="/cache.manifest"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
 <html class="not-ready">
   <!--<![endif]-->
@@ -12,6 +12,7 @@
     <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" type="text/css" href="lib/css/normalize.css">
+    <link href='http://fonts.googleapis.com/css?family=Cabin:regular,bold' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cantarell:regular,bold' rel='stylesheet' type='text/css'>
     <!-- Mobile viewport optimized: j.mp/bplateviewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
