--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                       11:00pm
                     </p>
                     <p class="description">
-                      How to prepare "Pisco Sour"
+                    Event
                     </p>
                   </div>
                   <div class="speech">
@@ -278,7 +278,7 @@
               <div class="section">
                 <div class="locationInfo">
                     <div class="image"><img src="lib/img/Hotel.jpg"></div>
-                    <div class="description"><p><span class="bold">El Country Club Lima Hotel</span> ubicado en el exclusivo distrito de San Isidro es reconocido como uno de más elegantes en Lima, Perú.</p><p><span class="bold">Direccion:</span><br>Los Eucaliptos 590 <br>San Isidro</br>Lima 35, Perú</div>
+                    <div class="description"><p><span class="bold">El Country Club Lima Hotel</span> ubicado en el exclusivo distrito de San Isidro es reconocido como uno de más elegantes en Lima.</p><p><span class="bold">Direccion:</span><br>Los Eucaliptos 590 <br>San Isidro<br>Lima 35, Perú</div>
                 </div>
                 <div class="map">
                     <iframe width="390" height="440" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=211472431020783374417.0004a2da2404e1c5db19c&amp;ll=-12.098861,-77.049533&amp;spn=0.006578,0.010943&amp;output=embed"></iframe>
