Added home gallery draft, and footers

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" type="text/css" href="lib/css/speakers.css">
     <link rel="stylesheet" type="text/css" href="lib/css/agenda.css">
     <link rel="stylesheet" type="text/css" href="lib/css/location.css">
+    <link rel="stylesheet" type="text/css" href="lib/css/nivoslider.css">
+    <link rel="stylesheet" type="text/css" href="lib/css/nivoslider-custom.css">
   </head>
   <body>
     <div class="page">
@@ -86,6 +88,15 @@
           </ul>
           <ul class="tab-content">
             <li>
+              <div class="home-section">
+                <div class="home-banner">
+                  
+                </div>
+                <div class="gallery">
+                  <img src="lib/img/app01.png" >
+                  <img src="lib/img/app02.png" >
+                </div>
+              </div>
             </li>
             <li>
               <div class="section">
@@ -290,11 +301,19 @@
         </div>
       </div>
       <div class="footer">
+        <ul>
+          <li><a href="#current=home"><span>home</span></a></li>
+          <li><a href="#current=evento"><span>evento</span></a></li>
+          <li><a href="#current=panelistas"><span>panelistas</span></a></li>
+          <li><a href="#current=agenda"><span>agenda</span></a></li>
+          <li><a href="#current=ubicacion"><span>ubicaci&oacute;n</span></a></li>
+        </ul>
       </div>
     </div>
     <script type='text/javascript' src='lib/js/jquery.js'></script>
     <script type='text/javascript' src="lib/js/jquery.boxshadow.js"></script>
     <script type='text/javascript' src="lib/js/bbq.js"></script>
+    <script type='text/javascript' src="lib/js/nivoslider.js"></script>
     <script type='text/javascript' src="lib/js/app.js"></script>
   </body>
 </html>
