--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!--<![endif]--> 
   <head> 
     <title>Business Goes Mobile</title> 
+    <link href="lib/img/favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
     <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame--> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
