--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
     <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame--> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-    <link rel="stylesheet" type="text/css" href="lib/css/normalize.css"> 
-    <link href='http://fonts.googleapis.com/css?family=Cabin:regular,bold' rel='stylesheet' type='text/css'> 
-    <link href='http://fonts.googleapis.com/css?family=Cantarell:regular,bold' rel='stylesheet' type='text/css'> 
-    <!-- Mobile viewport optimized: j.mp/bplateviewport --> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+	<!--@CSS-DEBUG-OPEN-->
+    <link rel="stylesheet" type="text/css" href="lib/css/normalize.css"> 
     <link rel="stylesheet" type="text/css" href="lib/css/base.css"> 
     <link rel="stylesheet" type="text/css" href="lib/css/event.css"> 
     <link rel="stylesheet" type="text/css" href="lib/css/speakers.css"> 
@@ -25,6 +23,14 @@
     <link rel="stylesheet" type="text/css" href="lib/css/location.css"> 
     <link rel="stylesheet" type="text/css" href="lib/css/nivoslider.css"> 
     <link rel="stylesheet" type="text/css" href="lib/css/nivoslider-custom.css"> 
+	<!--@CSS-DEBUG-CLOSE-->
+	
+	<!--@RELEASE-CSS-->
+    <!-- external fonts should go after all the css -->
+    <link href='http://fonts.googleapis.com/css?family=Cabin:regular,bold' rel='stylesheet' type='text/css'> 
+    <link href='http://fonts.googleapis.com/css?family=Cantarell:regular,bold' rel='stylesheet' type='text/css'> 
+	
+    
   </head> 
   <body> 
     <div class="page"> 
@@ -316,11 +322,14 @@
         </ul> 
       </div> 
     </div> 
+    <!--@JS-DEBUG-OPEN-->
     <script type='text/javascript' src='lib/js/jquery.js'></script> 
     <script type='text/javascript' src="lib/js/jquery.boxshadow.js"></script> 
     <script type='text/javascript' src="lib/js/bbq.js"></script> 
     <script type='text/javascript' src="lib/js/nivoslider.js"></script> 
     <script type='text/javascript' src="lib/js/app.js"></script> 
+    <!--@JS-DEBUG-CLOSE-->
+    <!--@RELEASE-JS-->
   </body> 
 </html> 
  
