added Ronald to ponentes

--- a/index.html
+++ b/index.html
@@ -222,7 +222,28 @@
                       Robles se graduó obtuvo su título de Marketing en la Universidad de Texas en Austin y su MBA con la Pontifica Universidad Católica de Chile. Ha sido profesor de la Universidad Francisco Marroquín en Guatemala. Es fluido en inglés, español y portugués. Actualmente reside  en Austin, TX.
                     </p> 
                   </div> 
-                </div> 
+                 </div> 
+
+
+                 <div class="speaker"> 
+                  <div class="photo-right"> 
+                    <img src="./lib/img/ronald.png"> 
+                  </div> 
+                  <div class="description-right"> 
+                    <p class="name"> 
+                      Ronald Hernández
+                    </p> 
+                    <p> 
+                      Ronald Hernández es el director de la unidad de desarrollo móvil para Avantica Technologies. Un ingeniero con una pasión para crear productos atractivos e innovadores y un autoproclamado "early adopter" de nuevas y excitantes tecnologías, Ronald supervisa un equipo de talentosos ingenieros multidisciplinarios que ejecutan proyectos para clientes en las más diversas latitudes. Su visión incluye hacer crecer la unidad de desarrollo móvil de forma tal que permita entregar los productos más interesantes y tecnológicamente retadores a clientes corporativos, así como de pequeña empresa en los diferentes mercados en los que se enfoca Avantica Technologies.
+                    </p> 
+                    <p> 
+                      Ronald tiene 10 años de experiencia en el desarrollo de sistemas a la medida, trabajando en sectores como banca, sistemas médicos, marketing y publicidad por Internet, impresiones y fotografía digital y entretenimiento entre otros. Ronald obtuvo su Bachillerato en Ciencias de la Computación del Instituto Tecnológico de Costa Rica, donde también ha cursado estudios avanzados de maestría. Adicionalmente es un Scrum Master Certificado.
+                    </p> 
+                  </div> 
+                 </div> 
+
+
+
               </div> 
             </li> 
             <li> 
